<resources>
    <string name="app_name">GeoToll Controller</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_toll_entry">TollEntryActivity</string>
    <string name="toll_name_text">Toll Name</string>
    <string name="add_toll_text">ADD TOLL</string>
    <string name="lat_text">Lat</string>
    <string name="lng_text">Lng</string>
    <string name="add_toll_charges_text">Add Toll Charges</string>
    <string name="return_charge_text">Return Charge</string>
    <string name="truck_text">Truck</string>
    <string name="single_text">Single</string>
    <string name="return_text">Return</string>
    <string name="four_wheeler_text">Four Wheeler</string>
    <string name="two_wheeler_text">Two Wheeler</string>
    <string name="submit_btn_txt">Submit</string>
    <string name="select_location">Select location</string>
    <string-array name="my_array_toll">
        <item>Toll</item>
    </string-array>
</resources>
